<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dashboard_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/backround_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#AA0B1F2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingTop="24dp"
            android:paddingRight="18dp"
            android:paddingBottom="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#F7FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="24dp"
                    android:paddingTop="26dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="28dp">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="118dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sora_extrabold"
                        android:gravity="center"
                        android:text="@string/customer_dashboard_title"
                        android:textColor="#102A3A"
                        android:textSize="27sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/customer_dashboard_subtitle"
                        android:textColor="#5A6870"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/place_order"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_marginTop="28dp"
                        android:backgroundTint="#84C8FF"
                        android:fontFamily="@font/sora_extrabold"
                        android:text="@string/action_place_order"
                        android:textColor="#071B25"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/current_order"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_marginTop="14dp"
                        android:backgroundTint="#71D7C7"
                        android:fontFamily="@font/sora_extrabold"
                        android:text="@string/action_current_order"
                        android:textColor="#071B25"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/order_history"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_marginTop="14dp"
                        android:backgroundTint="#F6C86E"
                        android:fontFamily="@font/sora_extrabold"
                        android:text="@string/action_order_history"
                        android:textColor="#071B25"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/account_settings"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_marginTop="14dp"
                        android:backgroundTint="#D6C7FF"
                        android:fontFamily="@font/sora_extrabold"
                        android:text="@string/action_account_settings"
                        android:textColor="#071B25"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="20dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/cust_img" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
