<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterActivity">

    <ImageView
        android:id="@+id/register_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/backround_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#990B1F2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/registerCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#F7FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="28dp"
            android:paddingRight="24dp"
            android:paddingBottom="28dp">

            <ImageView
                android:layout_width="187dp"
                android:layout_height="148dp"
                android:layout_marginBottom="14dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_extrabold"
                android:gravity="center"
                android:text="Choose your role"
                android:textColor="#102A3A"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="Create the account that matches how you will use NeighbourNeed."
                android:textColor="#5A6870"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/customer"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="#84C8FF"
                android:fontFamily="@font/sora_extrabold"
                android:text="@string/action_register_cust"
                android:textColor="#071B25"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.85"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/cust_img" />

            <Button
                android:id="@+id/shopper"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#71D7C7"
                android:fontFamily="@font/sora_extrabold"
                android:text="@string/action_register_shop"
                android:textColor="#071B25"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.85"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/shop_img" />

            <Button
                android:id="@+id/admin"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#F6C86E"
                android:fontFamily="@font/sora_extrabold"
                android:text="@string/action_register_admin"
                android:textColor="#071B25"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.85"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/admin_img" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
